# flatviewfs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
docs/: architecture.md  contributing.md  index.md  operations.md  usage.md
examples/: vcf-canonical-flat.toml  vcf-canonical-full-flat.toml  vcf-canonical-full.toml  vcf-canonical.toml  vcf-manifest.toml
scripts/: build-docs.sh
src/: cache.rs  duckdb_runner.rs  duckfuse.rs  fs.rs  lib.rs  main.rs  manifest.rs  materialize.rs  route.rs
src/formatters/: csv.rs  mod.rs  vcf.rs
tests/: materialize.rs  vcf_canonical.rs
vcf/: README.md  canonical_tsv.py
vcf/tests/: test_canonical_tsv.py
vcf/tests/test-files/: 0GOOR_HG002_subset.vcf  NG131FQA1I_subset.vcf
