[package]
name = "flatviewfs"
version = "0.0.1"
edition = "2026"
authors = ["Benno Kruit", "Elias Crum"]

[[bin]]
name = "duckfuse"
path = "src/duckfuse.rs"

[dependencies]
fuser = "0.15"
duckdb = "1.10501.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
ctrlc = "3"
