[package]
name = "flatviewfs"
version = "0.0.1"
edition = "2021"
authors = ["Benno Kruit", "Elias Crum"]

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3"
duckdb = "1.10501.0"
env_logger = "0.11"
fuser = { version = "0.15", features = ["libfuse"] }
glob = "0.3"
libc = "0.2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
